--- a/backend/index.html
+++ b/backend/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-white">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/puntosur.ico" />
+    <link rel="icon" type="image/svg+xml" href="/icono_urquiza_soluciones.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Punto Sur Pastelería</title>
+    <title>Urquiza Soluciones</title>
   </head>
   <body class="h-full">
     <div id="app"></div>
